# Compiler_archive

./: .gitignore  CMakeLists.txt  README.md
include/: generate.h  logger.h  position.h  semantic.h  stack.h  symbol.h  tools.h  tree.h
src/: generate.cpp  logger.cpp  main.cpp  parser.y  scanner.l  semantic.cpp  stack.cpp  symbol.cpp  tools.cpp  tree.cpp
temp/: 1.y
test/: debug.sh  final_test.cpp  final_test.sh  test.sh
test-case/: case-if-else.pas  case-recursion.pas  case-relational-operators.pas  case-type-test.pas  case1.pas  case3.pas  case4.pas  case5.pas  case6.pas  fianl_test_3.pas  final_test_6.pas
test/cases/: 1.pas  2.pas  case-bool-operators.pas  final_test_1.pas  final_test_2.pas  final_test_4.pas  final_test_5.pas
test/cases/codegen/loop/: loop.c  loop.pas
test/cases/codegen/read-write-string/: read-write-string.c  read-write-string.pas
test/cases/codegen/reference-value/: reference-value.c  reference-value.pas
test/cases/complex/1/: 1.c  1.pas
test/cases/complex/2/: 2.c
test/cases/complex/3/: 3.c
test/cases/complex/4/: 4.c
test/cases/complex/5/: 5.c
test/cases/complex/6/: 6.c
test/cases/final/1/: 1.c  1.pas
test/cases/final/2/: 2.c  2.pas
test/cases/final/3/: 3.c
test/cases/final/5/: 5.c
test/cases/final/6/: 6.pas
test/cases/final/7/: 7.c  7.pas
test/cases/final/8/: 8.pas
test/cases/final/exgcd/: exgcd.in  exgcd.out  exgcd.pas
test/cases/final/fastpower/: fastpower.in  fastpower.out  fastpower.pas
test/cases/final/gcd/: gcd.pas
test/cases/final/quicksort/: quicksort.in  quicksort.out  quicksort.pas
test/cases/lexical/recovery-1/: recovery-1.pas
test/cases/lexical/recovery-2/: recovery-2.pas
test/cases/parser/: test_idlist.pas
test/cases/parser/array-type-test/: test_array_type.pas
test/cases/parser/program-test/: program-test.pas
test/cases/parser/var-declarations-test/: var-declarations-test.pas
test/cases/semantic/array-test/: array-test.pas
test/cases/semantic/function-test/: function-test.pas
test/cases/semantic/symbol-test-1/: symbol-test-1.pas
test/cases/semantic/type-test-1/: type-test-1.pas
test/cases/semantic/type-test-2/: type-test-2.pas
test/cases/semantic/variable-test/: variable-test.pas
test/cases/syntax/array-type-test/: array-type-test.c  array-type-test.pas
test/cases/syntax/const-declarations-test/: const-declarations-test.c  const-declarations-test.pas
test/cases/syntax/const-value-test/: const-value-test.c  const-value-test.pas
test/cases/syntax/idlist-test/: idlist-test.c
test/cases/syntax/statement-test/: statement-test.c  statement-test.pas
test/cases/syntax/subprogram-test/: subprogram-test.c  subprogram-test.pas
